Fixed terminal dark mode

--- a/themes/kmom02/scss/typography.scss
+++ b/themes/kmom02/scss/typography.scss
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-body;
 }
 
 h1,
@@ -8,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $font-headings;
 }
 
 html {
