--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -11,3 +11,6 @@ $linkColor: #0074d9;
 $main-font-size: 1em;
 $main-line-height: 1.4;
 $magic-number: $main-font-size * $main-line-height;
+
+$font-body: 'Roboto', sans-serif;
+$font-headings: 'Open Sans', sans-serif;
